# intelli-trip-planner

./: .coveragerc  .env.example  .eslintignore  .eslintrc.js  .eslintrc.yml  .gitignore  .huskyrc.yml  .lintstagedrc.yml  .prettierignore  .prettierrc.yml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Sample.py  app.js  coverage.json  nodemon.json  package-lock.json  package.json  pyproject.toml  report.20191104.175954.5026.0.001.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: nodejs.yml  python-app.yml
client-legacy/app/: app.js  app_node.js  place_API_KEY_in_this_directory  styles.min.css.map  styles.scss
client-legacy/data/: EXPLANATION.md
client/app/: app.js  getPermutations.js
data/nps/: nps_acronyms_classifications.csv  nps_alphacodes.csv  nps_annual_park_ranking_report_2019.csv
server/: app.js
server/routes/: index.js
src/: Untitled-1  app.js  app.py  app_promiseStyle.js  getDistanceMatrix.js  getPermutations.js  index.html  package.json
src/app/: app.js  index.html  index.php  place_API_KEY_in_this_directory  styles.scss
src/core/: __init__.py  call_nps_api.py  create_distance_matrix.py  create_distance_matrix_for_dev.py  find_route.py  get_distance_matrix.py  get_nps_api.py  traveling_salesman.py
src/core/data/: duration_matrix_list.pkl  parsed_distance_matrix_distance.pkl  parsed_distance_matrix_distance.txt  parsed_distance_matrix_duration.pkl  parsed_distance_matrix_duration.txt
src/core/distancematrix/: __init__.py  google_distance_matrix.py
src/core/helpers/: __init__.py  decorators.py  general.py  helper.py  read_write.py
src/core/lib/: __init__.py  get_distance_matrix.py
src/data/: EXPLANATION.md  distance_matrix.json  distance_matrix_list.txt  duration_matrix_list.txt  parseCities.ipynb
src/data/ref/: EXPLANATIONS.md  parsed_us_cities.csv
src/html/common/: config.php  footer.php  head.php  header.php  htmlTag.php  methods.php  navbar.php
src/html/css/: prism.css  prism.min.css  styles.min.css  (+1 more)
src/lib/: get_distance_matrix.py
src/login/: place_API_KEY_in_this_directory
src/old/: app.js  app_1.js  app_2.js  app_3.js  app_promiseStyle.js  getPermutations.js  package-lock.json  report.20191104.175900.4871.0.001.json  report.20191104.180335.5129.0.001.json
src/optimize_route/: create_distance_matrix_for_dev.py  traveling_saleman.py  traveling_salesman.py
src/tests/: __init__.py  load_answer_key.py  main_test.py  test_find_route.py  test_get_distance_matrix.py  test_google_distance_matrix.py  test_helper.py  test_helpers_decorators.py  test_helpers_general.py  test_helpers_read_write.py  test_traveling_salesman.py
(+15 files in other folders)
